Wed Jan 31 18:32:34 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ChangeLog-9395: Remove duplicate entries from 1996 which
	accidentally got into this file.

	* client.c (read_line, read_from_server): Change "premature end of
	file from server" message to "end of file from server (consult
	above messages if any)" because 99% of the time it means rsh has
	printed an error message and exited.

Wed Jan 31 15:09:51 1996  J.T. Conklin  <jtc@rtl.cygnus.com>

	* edit.c (ncheck_fileproc): Fix memory leak; free line before
	returning.

Tue Jan 30 18:06:12 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (do_recursion): Add comment about the fact that we
	don't have locks in place at certain points.

Tue Jan 30 09:43:34 1996  Vince Demarco  <vdemarco@bou.shl.com>

	* edit.c (notify_proc): have notify_proc call expand_path with
	the name of the filter program. The user may have used a
	cvs environmental variable. (Popen will expand it, but it may not
	use the correct value)

Tue Jan 30 09:43:34 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ChangeLog: take the pre-1996 changes and put them in a new file
	ChangeLog-9395.
	* ChangeLog-9194: Renamed from ChangeLog.fsf.
	* ChangeLog-9194, ChangeLog-9395, ChangeLog: Add additional text
	explaining the difference between all these logs and pointing to
	older logs.
	* Makefile.in (DISTFILES): Add ChangeLog-9194 and ChangeLog-9395;
	remove ChangeLog.fsf.

	* modules.c (do_module): Don't fall through from 'l' to 'o' case
	of option processing switch statement.

Tue Jan 30 06:50:19 1996  J.T. Conklin  <jtc@rtl.cygnus.com>

	* client.c (send_repository): Fix memory leak; free adm_name
 	before returning.
	* diff.c (diff_file_nodiff): Fix memory leak; free xvers before
 	returning.
	* rtag.c (rtag_fileproc): Fix memory leak; if branch_mode is set,
 	free rev before returning.
	* status.c (status_fileproc, tag_list_proc): Fix memory leak; free
 	return value of RCS_whatbranch.